# Aede_proyect

./: .gitignore  CMakeLists.txt  README.md  analisis_anova.py  bubble_sort.cpp  contadores.cpp  contadores.h  heap_sort.cpp  heap_sort.h  insertion_sort.cpp  insertion_sort.h  main.cpp  merge_sort.cpp  quick_sort.cpp  quick_sort.h  resultados.csv  visualizar.py
graficas/: index.html
